--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,47 @@
 body {
 	font-family: 'Lato', Calibri, Arial, sans-serif;
 }
+
+/*  inicio nuevos 
+html { height: 100%; font-size: 100%;}
+.container {
+	width: 100%;
+	position: relative;
+}
+/* chocan 
+
+*,
+*:after,
+*:before {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	padding: 0;
+	margin: 0;
+}
+
+
+/* Clearfix hack by Nicolas Gallagher: http://nicolasgallagher.com/micro-clearfix-hack/ */
+
+/*
+.clearfix:before,
+.clearfix:after {
+    content: " ";
+    display: table;
+}
+
+.clearfix:after {
+    clear: both;
+}
+
+.clearfix {
+    *zoom: 1;
+}
+
+*/
+
+/* terminan nuevos */
+
 .logo{
 	margin-left: 30px;
 	margin-top: 10px;
@@ -262,3 +303,20 @@ h2
 	}
 }
 
+/* opacidad */
+
+#cuadroNegro{
+	background-color:#000000;
+	opacity:0.45;
+	filter:alpha(opacity=45);
+	
+	width:250px;
+	height:auto;
+	margin:30px 0px 0px 30px;
+	padding:5px;
+	text-align: justify;
+	font-size:12px;
+	}
+
+#cuadroNegro H1{
+	font-size:18px;color:#FFF;}
