--- a/css/style.css
+++ b/css/style.css
@@ -2,47 +2,10 @@
 body {
 	font-family: 'Lato', Calibri, Arial, sans-serif;
 }
-
-/*  inicio nuevos 
-html { height: 100%; font-size: 100%;}
 .container {
 	width: 100%;
 	position: relative;
 }
-/* chocan 
-
-*,
-*:after,
-*:before {
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-	padding: 0;
-	margin: 0;
-}
-
-
-/* Clearfix hack by Nicolas Gallagher: http://nicolasgallagher.com/micro-clearfix-hack/ */
-
-/*
-.clearfix:before,
-.clearfix:after {
-    content: " ";
-    display: table;
-}
-
-.clearfix:after {
-    clear: both;
-}
-
-.clearfix {
-    *zoom: 1;
-}
-
-*/
-
-/* terminan nuevos */
-
 .logo{
 	margin-left: 30px;
 	margin-top: 10px;
@@ -96,6 +59,7 @@ header {
 	height: 370px;
 	overflow-x: hidden;
 }
+
 #center_btn{
 	text-align: center;
 	width: 80%;
@@ -169,6 +133,11 @@ ul.horz_menu li {
    margin: -80px auto;
    left: 164px;
    width: 1160px;
+}
+.wrapper2{
+   margin: 250px auto;
+   width: 100%;
+   height: 100%;
 }
 .left1{
 	padding: 10px;
@@ -319,4 +288,6 @@ h2
 	}
 
 #cuadroNegro H1{
-	font-size:18px;color:#FFF;}
+	font-size:18px;color:#FFF;
+}
+
