--- a/css/styles.css
+++ b/css/styles.css
@@ -65,18 +65,16 @@
 	background-image:url(../img/btn_play.gif);
 }
 
-
-.rb-week > div.cuadroNegro{
-	background-color:#000000;
-	opacity:0.45;
-	filter:alpha(opacity=45);	
-	width:250px;
-	height:auto;
-	margin:30px 0px 0px 30px;
-	padding:5px;
-	text-align: justify;
-	font-size:12px;
-	}
-
-.cuadroNegro H1{
-	font-size:18px;color:#FFF;}
+.headline{
+	margin: 0 auto;
+	width: 90%;
+	font-size: 26px;
+	color:#FFF;
+	text-shadow: #000 1px 1px 3px;
+}
+.desc{
+	font-size: 18px;
+	color:#FFF;
+	text-align:justify;
+	text-shadow: #000 1px 1px 3px;
+}
